<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/contactAvatar"
        android:src="@mipmap/contact_avatar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/contactName"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/contactName"
            android:textSize="25sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/contactPhone"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/contactPhone"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>